--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     , "dateformat": "^3.0.3"
     , "morgan" : "^1.9.0"
     , "cors" : "^2.8.4"
+    , "mongoose" : "^5.0.13"
   },
   "devDependencies": {
     "nodemon": "^1.13.3"
